src/tests/snapshots/parser_test__tests__compiler__compiler_blocks@in_extend.txt.snap
---
source: src/tests/compiler.rs
expression: s
input_file: src/tests/compiler_inputs/blocks/in_extend.txt
---
=== in_extend.txt ===
0000 CallBlock("content")


>> Block: content
=== in_extend.txt ===
0000 WriteText("\n1. ")
0001 CallBlock("nested")
0002 WriteText("\n")
---
>> Block: nested
=== in_extend.txt ===
0000 WriteText("A")
---

