src/tests/snapshots/parser_test__tests__compiler__compiler_ok@block_set.txt.snap
---
source: src/tests/compiler.rs
expression: compiler.chunk
input_file: src/tests/compiler_inputs/success/block_set.txt
---
=== block_set.txt ===
0000 Capture
0001 WriteText("\nHello ")
0002 LoadName("world")
0003 WriteTop
0004 WriteText("\n")
0005 EndCapture
0006 BuildKwargs(0)
0007 ApplyFilter("upper")
0008 LoadConst(String("lang"))
0009 LoadConst(String("fr"))
0010 BuildKwargs(1)
0011 ApplyFilter("trans")
0012 Set("hero")

