src/tests/snapshots/parser_test__tests__compiler__compiler_ok@macro_usage.txt.snap
---
source: src/tests/compiler.rs
expression: compiler.chunk
input_file: src/tests/compiler_inputs/success/macro_usage.txt
---
=== macro_usage.txt ===
0000 WriteText("\n")
0001 LoadConst(String("arg"))
0002 LoadConst(I64(1))
0003 BuildKwargs(1)
0004 CallMacro(0)
0005 WriteTop
0006 WriteText("\n")

